# demo_cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo_cli_hook.py  pyproject.toml  requirements.txt  start.sh
core/: __init__.py  approval.py  cli.py  core.py  demo.py  report.py  reversibility.py  setup_pocketos.py
examples/: create_production_db.py
src/demo_cli/: __init__.py  approval.py  classify.py  cli.py  config.py  context.py  decide.py  diff.py  guard.py  preview.py  receipts.py  recovery.py  render.py  version.py
src/demo_cli/hooks/: __init__.py  claude_code.py
tests/: test_beta2.py  test_beta_fixes.py  test_classify.py  test_decide.py  test_guard.py  test_receipts.py  test_recovery.py
